Fix sq warnings created from jdk 17 migration